hoehen und venn diagramm angepasst

--- a/main.css
+++ b/main.css
@@ -58,7 +58,10 @@ buttonText:hover {
 .tick{
     font-family: Noto Sans;
     font-size: 13px;
-  /*  fill: white;*/
+}
+
+.tick:hover{
+    fill: white;
 }
 
 .selected {
