--- a/main.css
+++ b/main.css
@@ -63,7 +63,7 @@ p.intro-text {
 }
 
 .tick{
-    font-family: Noto Sans;
+    font-family: NotoSans-SemiBold;
     font-size: 12px;
     font-weight: 400;
 }
