--- a/main.css
+++ b/main.css
@@ -69,15 +69,25 @@ fill: white;
 .tick{
     font-family: Noto Sans;
     font-size: 12px;
-    font-weight: 400;
+    font-weight: 700;
     fill: #4b545c;
 }
 
 #idTick2 ,#idTick3 ,#idTick7, #idTick8{
     transform: translateY(22%);
+    -ms-transform: translateY (22%);
+    -webkit-transform: translateY (22%);
+    -moz-transform: translateY (22%);
+    -o-transform: translateY (22%);
+    transform: translateY(22%);
 }
 
 #idTick0 ,#idTick1 ,#idTick5, #idTick6{
+    transform: translateY(12%);
+    -ms-transform: translateY (12%);
+    -webkit-transform: translateY (12%);
+    -moz-transform: translateY (12%);
+    -o-transform: translateY (12%);
     transform: translateY(12%);
 }
 
@@ -106,10 +116,10 @@ fill: white;
 
 .infoSubhead {
     color: #4B545c;
-     font-family: Noto Sans;
+    font-family: Noto Sans;
     font-size: 15px;
     letter-spacing: 0.2px;
-     line-height: 1.5;
+    line-height: 1.5;
     font-weight: 700;
     padding-top: 18px;
 }
