--- a/main.css
+++ b/main.css
@@ -159,11 +159,11 @@ img.chart {
 .chart {
     vertical-align: top;
     display: inline-block;
-    font-weight: 700;
+    line-height: 1.5;
     letter-spacing: 0.2px;
     color: #002D5A;
     font-size: 16px;
-    font-family: NotoSans;
+    font-family: NotoSans Bold;
 }
 
 
